--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,3 +1,12 @@
+/* roboto-300 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/roboto-v20-latin-300.woff2") format("woff2"),
+    url("../fonts/roboto-v20-latin-300.woff") format("woff");
+}
+/* roboto-400 - latin */
 @font-face {
   font-family: "Roboto";
   font-style: normal;
