finish the project

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,5 @@
 .header {
   padding-top: 12px;
-  padding-bottom: 56px;
   position: fixed;
   top: 0;
   left: 0;
@@ -14,6 +13,7 @@
   justify-content: space-between;
 }
 .header__top-tel {
+  position: relative;
   display: flex;
   align-items: center;
   &::before {
@@ -43,6 +43,20 @@
   font-size: 14px;
   line-height: 16px;
   color: #272727;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  &:hover {
+    opacity: 0.8;
+  }
+  &:active {
+    opacity: 0.6;
+  }
 }
 // .header__top-logo {
 // }
@@ -82,20 +96,130 @@
   justify-content: space-between;
   background-color: #0055b8;
   border-radius: 5px;
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  z-index: 10;
-  max-width: 1140px;
-  width: 100%;
-  transform: translate(-50%, -50%);
   padding: 20px 32px;
+  transform: translateY(50%);
 }
 .header__bottom-logo {
+  display: block;
+}
+.header__button-toggler {
   display: none;
 }
 .header__bottom-logo-img {
   display: block;
 }
-// .header__nav {
-// }
+.header__bottom-lists {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__bottom-mobile {
+  display: none;
+}
+@include responsive(1024) {
+  .header {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .header__container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .header__top {
+    display: none;
+  }
+  .header__bottom {
+    transform: none;
+    border-radius: 0;
+  }
+  .header__bottom-logo {
+    display: block;
+  }
+  .header__bottom-mobile {
+    display: block;
+    flex-grow: 1;
+  }
+}
+@include responsive(850) {
+  .header__bottom {
+    padding-top: 23px;
+    padding-bottom: 23px;
+  }
+  .header__bottom-mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .header__button-toggler {
+    display: block;
+    width: 25px;
+    height: 22px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    background-image: url("../img/meu-toggler.svg");
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: auto;
+    transition: background-position 0.2s ease;
+  }
+  .header__bottom-lists {
+    display: none;
+  }
+  .header--open .header__button-toggler {
+    background-position: right center;
+  }
+  .header--open .header__bottom-lists {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding-bottom: 26px;
+    position: absolute;
+    top: 68px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 68px);
+    background-color: #0055b8;
+  }
+  .header--open .header__socials {
+    justify-content: center;
+  }
+  // nojs
+  .header--nojs .header__bottom {
+    flex-direction: column;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .header--nojs .header__bottom-lists {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    position: static;
+  }
+  .header--nojs .header__bottom-mobile {
+    margin-bottom: 20px;
+  }
+  .header--nojs .header__socials {
+    justify-content: center;
+  }
+  .header--nojs .header__nav {
+    margin-bottom: 20px;
+  }
+  .header--nojs {
+    position: static;
+  }
+  .header--nojs .header__bottom-toggler {
+    display: none;
+  }
+}
+@include retina-bg {
+  .header__top-tel::before {
+    background-image: url("../img/phone@2x.png");
+  }
+  .header__top-clock::before {
+    background-image: url("../img/clock@2x.png");
+  }
+}
