--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -1,6 +1,12 @@
 .logo {
   display: inline-block;
   vertical-align: baseline;
+  &:hover {
+    opacity: 0.8;
+  }
+  &:active {
+    opacity: 0.6;
+  }
 }
 .logo__img {
   display: block;
