--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,4 +1,5 @@
 html {
+  height: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -9,7 +10,10 @@ html {
   box-sizing: inherit;
 }
 
-body {
+.body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
   font-family: "Roboto", "Arial", sans-serif;
@@ -23,4 +27,12 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+@include responsive(1024) {
+  .body {
+    margin-top: 68px;
+    &--nojs {
+      margin-top: 0;
+    }
+  }
 }
