--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -3,6 +3,15 @@
 @import "header";
 @import "logo";
 @import "nav";
+@import "main";
 @import "socials";
 @import "intro";
-@import "main";
+@import "features";
+@import "contact";
+@import "section-header";
+@import "services";
+@import "technology";
+@import "team";
+@import "quality";
+@import "reviews";
+@import "location";
