--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -1,5 +1,3 @@
-// .nav {
-// }
 .nav__list {
   display: flex;
   align-items: center;
@@ -26,5 +24,32 @@
   }
   &:active {
     opacity: 0.6;
+  }
+}
+@include responsive(850) {
+  .nav {
+  }
+  .nav__list {
+    flex-direction: column;
+  }
+  .nav__item {
+    margin: 0;
+    width: 100%;
+    border-bottom: 1px solid #ffd600;
+    border-top: 1px solid #ffd600;
+  }
+  .nav__link {
+    text-align: center;
+    display: block;
+    padding: 24px 0;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #ffd600;
+    &:hover {
+      background-color: #ffd600;
+      color: #0055b8;
+    }
   }
 }
