fix isseu in nojs

--- a/css/styles.css
+++ b/css/styles.css
@@ -790,7 +790,7 @@ img {
   .header--nojs {
     position: static;
   }
-  .header--nojs .header__bottom-toggler {
+  .header--nojs .header__button-toggler {
     display: none;
   }
 }
