--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -211,7 +211,7 @@
   .header--nojs {
     position: static;
   }
-  .header--nojs .header__bottom-toggler {
+  .header--nojs .header__button-toggler {
     display: none;
   }
 }
