--- a/css/styles.css
+++ b/css/styles.css
@@ -1293,6 +1293,7 @@ img {
 .contact__agreement-text {
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 10px;
   font-weight: 300;
   font-size: 18px;
   line-height: 21px;
