--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -47,6 +47,7 @@
 .contact__agreement-text {
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 10px;
   font-weight: 300;
   font-size: 18px;
   line-height: 21px;
